--- a/.gitignore
+++ b/.gitignore
@@ -2,10 +2,7 @@
 .gradle
 /build/
 !gradle/wrapper/gradle-wrapper.jar
-core/src/main/resources/application.yml
-/core/src/main/resources/application.properties
-/core/src/main/resources/application.yml
-/core/out
+out/
 /target/
 
 ### STS ###
