* POST endpoint for search by text with return 202 and requestId; * GET endpoint for get searching results by requestId with pagination; * iterative loading new searching results after reaching limit; * Task schedule managing for asynchronous operations searching.

--- a/.gitignore
+++ b/.gitignore
@@ -18,7 +18,7 @@ out/
 *.iws
 *.iml
 *.ipr
-applicaton.properties
+
 
 nbproject/private/
 build/
@@ -27,3 +27,5 @@ dist/
 nbdist/
 .nb-gradle/
 /log/
+applicaton.properties
+/src/main/resources/applicaton.properties
