--- a/build.gradle
+++ b/build.gradle
@@ -22,8 +22,14 @@ sourceCompatibility = JavaVersion.VERSION_11
 repositories {
     mavenCentral()
 }
-
+ext {
+    httpclientVersion = '4.5.6'
+}
 dependencies {
-    compile("org.springframework.boot:spring-boot-starter")
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter'
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-web'
+
+    compile group: 'org.apache.httpcomponents', name: 'httpclient', version: httpclientVersion
+
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
